--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <div class="text-center">
-                    <div class="text">1 col</div>
-                </div>
-            </div>
+            <div class="col">1 col</div>
             <div class="col">1 col</div>
             <div class="col">1 col</div>
             <div class="col">1 col</div>
